Bug squashing is finished in main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1931,6 +1931,7 @@ p.special:after {
 	background-color: rgba(0, 0, 0, 0.125);
 }
 
+
 h2.tooTall{
 	line-height:1 !important;
 }
@@ -1948,7 +1949,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h2 {
-	font-size: 15pt;
+	font-size: 15pt !important;
 }
 
 h3 {
